// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api_tags getApiTags constructs the https tags for the owner: cases 1`] = `
Object {
  "all": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "casesFilesCasesCreate",
    "casesFilesCasesRead",
  ],
  "delete": Array [
    "casesFilesCasesDelete",
  ],
  "read": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "casesFilesCasesRead",
  ],
}
`;

exports[`api_tags getApiTags constructs the https tags for the owner: observability 1`] = `
Object {
  "all": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "observabilityFilesCasesCreate",
    "observabilityFilesCasesRead",
  ],
  "delete": Array [
    "observabilityFilesCasesDelete",
  ],
  "read": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "observabilityFilesCasesRead",
  ],
}
`;

exports[`api_tags getApiTags constructs the https tags for the owner: securitySolution 1`] = `
Object {
  "all": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "securitySolutionFilesCasesCreate",
    "securitySolutionFilesCasesRead",
  ],
  "delete": Array [
    "securitySolutionFilesCasesDelete",
  ],
  "read": Array [
    "casesSuggestUserProfiles",
    "bulkGetUserProfiles",
    "casesGetConnectorsConfigure",
    "securitySolutionFilesCasesRead",
  ],
}
`;
